fixed the overlapping size to the size of smartphone screen

--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,6 @@
 html {
   scroll-behavior: smooth;
+  width: fit-content;
 }
 body {
   margin: 0;
